# mnist

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  model.py  pyproject.toml
.dvc/: config
configs/: config.py  config.yaml
data/MNIST/raw/: t10k-images-idx3-ubyte.dvc  t10k-labels-idx1-ubyte.dvc  train-images-idx3-ubyte.dvc  train-labels-idx1-ubyte.dvc
mnist/: data_load.py  functions.py  infer.py  model.py  run_server.py  server_test.py  train.py
models/: .gitignore  best_model.onnx.dvc  model.pth.dvc  onnx_model.dvc
predictions/: .gitignore  answers.csv.dvc
